--- a/binder/index.html
+++ b/binder/index.html
@@ -1,4 +1,4 @@
-<h2>Binder Redirector - v1</h2>
+<h2>Binder Redirector - v2</h2>
 
 <pre>
 <script> 
@@ -14,13 +14,11 @@
   site = referrer[2];
   user = referrer[3];
   repo = referrer[4];
-  document.write('site: ', site, '\n');
-  document.write('user: ', user, '\n');
-  document.write('repo: ', repo, '\n');
-
   launch = 'http://mybinder.org/v2/gh/' + user + '/' + repo + '/master?urlpath=rstudio'
-  document.write('launch: ', launch, '\n');
 
+  console.log('site: ', site, '\n');
+  console.log('user: ', user, '\n');
+  console.log('repo: ', repo, '\n');
   console.log('launch: ', launch, '\n');
 
   // window.location.href = launch;
