--- a/binder/index.html
+++ b/binder/index.html
@@ -1,4 +1,4 @@
-<h2>Binder Redirector - v3</h2>
+<h2>Binder Redirector - v4</h2>
 
 <pre>
 <script> 
@@ -17,7 +17,7 @@
   console.log('repo: ', repo, '\n');
   console.log('launch: ', launch, '\n');
 
-  setTimeout(function(){ alert(launch); }, 3000);
+  setTimeout(function(){ alert('Redirect ?); window.location.href = launch;}, 2000);
   // window.location.href = launch;
 
 </script>
