--- a/binder/index.html
+++ b/binder/index.html
@@ -22,7 +22,7 @@
   console.log('repo: ', repo, '\n');
   console.log('launch: ', launch, '\n');
 
-  setTimeout(function(){ alert('Redirect ?); window.location.href = launch;}, 2000);
+  setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
   // window.location.href = launch;
 
 </script>
