--- a/binder/index.html
+++ b/binder/index.html
@@ -13,7 +13,7 @@
   site = referrer[2];
   user = referrer[3];
   repo = referrer[4];
-  branch = referrer[5];  // include extra path
+  //branch = referrer[5];  // include extra path
  
   // for the moment we will assume we are using github to host the repo and we want the master branch
   launch = 'http://mybinder.org/v2/gh/' + user + '/' + repo + '/' + branch;
