--- a/binder/index.html
+++ b/binder/index.html
@@ -1,7 +1,9 @@
 <html>
  <body>
-<h2 style="text-align:center">Binder Redirector - v1.1</h2>
-
+  
+ <br><br><br>
+  
+<h2 style="text-align:center">Binder Redirector - v1.2</h2>
 
 <script> 
  
@@ -29,14 +31,14 @@
   
   <br><br><br>
   
-  <h3 style="text-align:center">
+  <p style="text-align:center">
   Binder Link:
   <script>
-    document.write('<a href="'+launch+'">");
-    document.write(launch, "</a>");
+    document.write('<a href="'+launch+'>);
+    document.write(launch, '</a>');
   </script>
   
-  </h3>
+  </p>
   
   
  </body>
