--- a/binder/index.html
+++ b/binder/index.html
@@ -34,7 +34,7 @@
   <p style="text-align:center">
   Binder Link:
   <script>
-    document.write('<a href="'+launch+'>);
+    document.write('<a href="'+launch+'>');
     document.write(launch, '</a>');
   </script>
   
