--- a/binder/index.html
+++ b/binder/index.html
@@ -3,7 +3,7 @@
   
  <br><br><br>
   
-<h2 style="text-align:center">Binder Redirector - v1.2</h2>
+<h2 style="text-align:center">Binder Redirector - v1.3</h2>
 
 <script> 
  
@@ -34,7 +34,7 @@
   <p style="text-align:center">
   Binder Link:
   <script>
-    document.write('<a href="'+launch+'>');
+    document.write('<a href="'+launch+'">');
     document.write(launch, '</a>');
   </script>
   
