--- a/binder/index.html
+++ b/binder/index.html
@@ -3,7 +3,7 @@
   
  <br><br><br>
   
-<h2 style="text-align:center">Binder Redirector - v1.3</h2>
+<h2 style="text-align:center">Binder Redirector - v1.4</h2>
 
 <script> 
  
@@ -25,13 +25,14 @@
   console.log('launch: ', launch, '\n');
 
   //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
+  setTimeout(function(){ window.location.href = launch;}, 1500);
   //window.location.href = launch;
 
 </script>
   
   <br><br><br>
   
-  <p style="text-align:center">
+  <p style="text-align:center; font-family: "Times New Roman", Times, serif;">
   Binder Link:
   <script>
     document.write('<a href="'+launch+'">');
