--- a/binder/index.html
+++ b/binder/index.html
@@ -25,14 +25,14 @@
   console.log('launch: ', launch, '\n');
 
   //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
-  setTimeout(function(){ window.location.href = launch;}, 1500);
+  setTimeout(function(){ window.location.href = launch;}, 1000);
   //window.location.href = launch;
 
 </script>
   
   <br><br><br>
   
-  <p style="text-align:center; font-family: "Times New Roman", Times, serif;">
+  <p style="text-align:center; font-family: Arial, Helvetica, sans-serif;">
   Binder Link:
   <script>
     document.write('<a href="'+launch+'">');
