--- a/binder/nbgitpuller.html
+++ b/binder/nbgitpuller.html
@@ -17,15 +17,20 @@
   extra = document.URL.replace(/.*\//, '')
  
   // for the moment we will assume we are using github to host the repo and we want the master branch
-  launch = 'http://mybinder.org/v2/gh/' + user + '/' + repo + '/master' + extra;
+  // launch = 'http://mybinder.org/v2/gh/' + user + '/' + repo + '/master' + extra;
 
+  env_repo = 'https://mybinder.org/v2/gh/MQ-software-carpentry/environment-r-tidyverse/master?urlpath=git-pull%3Frepo%3D'
+  launch = env_repo + 'https%253A%252F%252Fgithub.com%252F' + user + '%252F' + repo + '%26urlpath%3Drstudio%252F%26branch%3Dmaster'
+ 
+ 
   console.log('site: ', site, '\n');
   console.log('user: ', user, '\n');
   console.log('repo: ', repo, '\n');
+ console.log('extra: ', extra, '\n');
   console.log('launch: ', launch, '\n');
 
   //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
-  setTimeout(function(){ window.location.href = launch;}, 10000);
+  //setTimeout(function(){ window.location.href = launch;}, 10000);
   //window.location.href = launch;
 
 </script>
