--- a/binder/test.html
+++ b/binder/test.html
@@ -45,6 +45,10 @@
     document.write('<a href="'+launch+'">');
     document.write(launch, '</a>');
   </script>
+   
+  <div style="align: center">
+   <img src="referrer-disable.png">
+  </div>
   
   </p>
   
