--- a/binder/test.html
+++ b/binder/test.html
@@ -3,7 +3,7 @@
   
  <style>
    body {
-    font: normal 12px Verdana, Arial, sans-serif;
+    font: normal 14px Verdana, Arial, sans-serif;
    }
  </style>
   
@@ -45,7 +45,7 @@
   
   <br><br><br>
   
-  <p style="text-align:center; font-family: Arial, Helvetica, sans-serif;">
+  <p style="text-align:center;">
   
   <script>
     if (user == "") {
@@ -53,6 +53,8 @@
     else {
       document.write('Binder Link: <a href="'+launch+'">');
       document.write(launch, '</a>');
+      setTimeout(function(){ window.location.href = launch;}, 10000);
+    }
     
   </script>
    
@@ -61,7 +63,7 @@
    <br><br><br><br>
    
    <p>
-   If redirection doesn't happen, try disabling your Chrome <em>reduced-referrer-granularity</em> by cutting and pasting the following:
+   If redirection fails, try disabling your Chrome <em>reduced-referrer-granularity</em> by cutting and pasting the following:
    
    <br><br><br><br>
     
