--- a/binder/test.html
+++ b/binder/test.html
@@ -41,7 +41,7 @@
   <p style="text-align:center;">
   
   <script>
-    document.write('Binder Link:");
+    document.write("Binder Link: ");
    </script>
    <script>
     if (user == "") {
