--- a/binder/test.html
+++ b/binder/test.html
@@ -43,7 +43,7 @@
 
    <script>
     if (user == "") {
-      document.write("<h1 style='color: red;'>Redirection Failed</h1>"); 
+      document.write("<h2 style='color: red; text-align:center"'>Redirection Failed</h2>"); 
     }
     else {
       
@@ -58,7 +58,7 @@
    
   <div style="text-align: center">
    
-   <br><br><br><br>
+   <br><br><br>
    
    <p>
    If redirection fails, try disabling your Chrome <em>reduced-referrer-granularity</em> by cutting and pasting the following:
