--- a/binder/index.html
+++ b/binder/index.html
@@ -43,7 +43,7 @@
 
    <script>
     if (user == "") {
-      document.write("<h2 style='color: red; text-align:center"'>Redirection Failed</h2>"); 
+      document.write("<h2 style='color: red; text-align:center;'>Redirection Failed</h2>"); 
     }
     else {
       
