--- a/binder/index.html
+++ b/binder/index.html
@@ -47,7 +47,7 @@
     <br><br><br>
 
     <p>
-    Please return to your personal repository and follow the Binder link again.
+    Please return to your personal repository and follow that Binder link instead.
 
     <br><br>
 
@@ -103,12 +103,12 @@
       target =  document.URL.replace(/.*?target=/, '');
       launch = target.replace(/USER/, user);
 
-      document.write('Binder Link: <a href="'+launch+'">');
-      document.write(launch, '</a>');
+      // document.write('Binder Link: <a href="'+launch+'">');
+      // document.write(launch, '</a>');
 
       //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
       //window.location.href = launch;
-      //setTimeout(function(){ window.location.href = launch;}, 500);
+      setTimeout(function(){ window.location.href = launch;}, 500);
     }
         
   </script>
