--- a/binder/index.html
+++ b/binder/index.html
@@ -110,6 +110,7 @@
 
       //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
       //window.location.href = launch;
+      alert("launch Now");
       setTimeout(function(){ window.location.href = launch;}, 500);
     }
         
