--- a/binder/index.html
+++ b/binder/index.html
@@ -107,7 +107,7 @@
 
       //setTimeout(function(){ alert('Redirect ?'); window.location.href = launch;}, 2000);
       //window.location.href = launch;
-      //setTimeout(function(){ window.location.href = launch;}, 3000);
+      setTimeout(function(){ window.location.href = launch;}, 500);
     }
         
   </script>
