--- a/binder/index.html
+++ b/binder/index.html
@@ -85,7 +85,7 @@
 
    <script>
 
-    if (user == "") {
+    if (user === undefined) {
       document.getElementById("username").style.display = "block";
     }
     else if (user == "MQ-software-carpentry") {
