--- a/binder/index.html
+++ b/binder/index.html
@@ -19,12 +19,11 @@
   // USER and REPO will be replace with info from the referrer (assuming we come from a github READM.md page)
  
   referrer = document.referrer.split('/');
- 
+  site = referrer[2];
   user = referrer[3];
   repo = referrer[4];
  
-  target =  document.URL.replace(/.*?target=/, '');
-  launch = target.replace(/USER/, user);
+  
 
   // user = "MQ-software-carpentry";
   // user = "";
@@ -85,7 +84,7 @@
 
    <script>
 
-    if (user === undefined) {
+    if (user == "") {
       document.getElementById("username").style.display = "block";
     }
     else if (user == "MQ-software-carpentry") {
@@ -96,6 +95,9 @@
     }
 
     function launch() {
+     
+      target =  document.URL.replace(/.*?target=/, '');
+      launch = target.replace(/USER/, user);
      
       console.log('document.referrer: ', document.referrer);
       console.log('referrer: ', document.referrer.split('/'));
