--- a/binder/index.html
+++ b/binder/index.html
@@ -84,7 +84,7 @@
 
    <script>
 
-    if (user === undefine || user == "") {
+    if (user === undefined || user == "") {
       document.getElementById("username").style.display = "block";
     }
     else if (user == "MQ-software-carpentry") {
