clarify warning message

--- a/binder/index.html
+++ b/binder/index.html
@@ -9,7 +9,7 @@
   
 <br><br><br>
   
-<h1 style="text-align:center">Binder Launch Redirector - v1.7.0</h1>
+// <h1 style="text-align:center">Binder Launch Redirector - v1.7.0</h1>
 
 <script>
  
@@ -36,7 +36,7 @@
     <p>
     You have clicked the Binder link from the MQ Software Carpenty workshop repository.
     <p>
-     rather than the Binder link in your personal <em>fork</em> of the repository.
+    You probably should have clicked the Binder link in your personal <em>fork</em> of the workshop repository.
 
     <br><br><br>
 
