relocate version banner

--- a/binder/index.html
+++ b/binder/index.html
@@ -9,7 +9,7 @@
   
 <br><br><br>
   
-// <h1 style="text-align:center">Binder Launch Redirector - v1.7.0</h1>
+
 
 <script>
  
@@ -46,7 +46,7 @@
     <br><br>
 
     <p style="font-size: 7px;">
-    <span onClick="launch();">Continue Anyway (you will not be able to push if you are not an instructor)</span>
+    <span onClick="launch();">Continue Anyway (you will not be able to git push if you are not an instructor) - Binder Redirector 1.7.0</span>
   </div>
   
   <div style="display: none; text-align: center;" id="username">
