update warning message / instructions

--- a/binder/index.html
+++ b/binder/index.html
@@ -34,9 +34,9 @@
     <h2 style='color: red; text-align:center;'>Binder Launch Not Proceeding</h2>
 
     <p>
-    You have clicked the Binder link from the MQ Software Carpenty workshop repository.
+    You have clicked a Binder link from and MQ Software Carpenty owned workshop repository.
     <p>
-    You probably should have clicked the Binder link in your personal <em>fork</em> of the workshop repository.
+    You probably intended to clicked a Binder link from your personal <em>fork</em> of a workshop repository.
 
     <br><br><br>
 
