--- a/binder/index.html
+++ b/binder/index.html
@@ -34,7 +34,7 @@
     <h2 style='color: red; text-align:center;'>Binder Launch Not Proceeding</h2>
 
     <p>
-    You have clicked a Binder link from and MQ Software Carpenty owned workshop repository.
+    You have clicked a Binder link from an MQ Software Carpentry owned workshop repository.
     <p>
     You probably intended to clicked a Binder link from your personal <em>fork</em> of a workshop repository.
 
